working on about section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,35 @@
         </nav>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="about">
+        <div class="about-text-container">
+          <span class="wave"> Hi there👋🏿</span>
+          <h1>I am <span>Williams</span></h1>
+          <p>
+            Creative<span> software engineer</span> who strongly focuses on
+            developing visually appealing and efficient web applications that
+            drive user growth and engagement. Highly skilled in translating
+            designs into functional code, and collaborating on solutions with
+            the product and server-side teams to offer the best user experience
+            and build higher customer lifetime value.
+          </p>
+          <div class="resume-talk">
+            <a href="#">Let's Talk</a>
+            <a href="#">Download CV</a>
+          </div>
+          <div class="socials">
+            <a href="#"><img src="assets/x icon.png" alt="x icon" /></a>
+            <a href="#"><img src="assets/instagram icon.png" alt="instagram icon" /></a>
+            <a href="#"><img src="assets/linkedin icon.png" alt="linkedin icon" /></a>
+            <a href="#"><img src="assets/github icon.png" alt="github icon" /></a>
+          </div>
+        </div>
+        <div class="about-image">
+          <img src="" alt="profile picture" />
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
