update on skill section

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <main>
       <section class="about">
         <div class="about-text-container">
-          <span class="wave"> Hi there👋🏿</span>
-          <h1>I am <span>Williams</span></h1>
+          <span class="wave"> Hi there👋🏾</span>
+          <h1>I am <span>Williams.</span></h1>
           <p>
             Creative<span> software engineer</span> who strongly focuses on
             developing visually appealing and efficient web applications that
