update on skill section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <p>PYTHON</p>
           </div>
           <div class="skill-card">
-            <img src="assets/c++ icon.png" alt="c++ icon" />
+            <img src="assets/cpp icon.png" alt="c++ icon" />
             <p>C++</p>
           </div>
           <div class="skill-card">
