--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
   <body>
     <header>
       <div class="header-container">
+        <!-- logo of the page -->
         <div class="logo">
           <span>WILLZ</span>
         </div>
+        <!-- Navigation links -->
         <nav>
           <ul class="nav-links">
             <li><a href="#">Home</a></li>
@@ -30,6 +32,7 @@
       </div>
     </header>
     <main>
+      <!-- About section of the page -->
       <section class="about">
         <div class="about-text-container">
           <h3>Hi there👋🏾</h3>
@@ -47,14 +50,18 @@
             <a href="#">Download CV</a>
           </div>
           <div class="socials">
-            <a href="#"><img src="assets/x icon.png" alt="x icon" /></a>
-            <a href="#"
+            <a href="https://x.com/AtabisaWilliams?s=09" target="_blank"
+              ><img src="assets/x icon.png" alt="x icon"
+            /></a>
+            <a href="https://www.instagram.com/atabisawilliams" target="_blank"
               ><img src="assets/instagram icon.png" alt="instagram icon"
             /></a>
-            <a href="#"
+            <a
+              href="https://www.linkedin.com/in/atabisawilliams"
+              target="_blank"
               ><img src="assets/linkedin icon.png" alt="linkedin icon"
             /></a>
-            <a href="#"
+            <a href="https://github.com/willzcode" target="_blank"
               ><img src="assets/github icon.png" alt="github icon"
             /></a>
           </div>
@@ -63,6 +70,7 @@
           <img src="assets/profile picture.jpg" alt="profile picture" />
         </div>
       </section>
+      <!-- Skill section of the page -->
       <section class="skills">
         <h3>SKILLS &AMP; TOOLS</h3>
         <div class="skills-container">
@@ -104,6 +112,7 @@
           </div>
         </div>
       </section>
+      <!-- Project section of the page -->
       <section class="projects">
         <h3>PROJECTS</h3>
         <div class="projects-container">
@@ -118,7 +127,9 @@
               company.
             </p>
             <a href="https://cyber-nova.vercel.app" target="_blank">🔗site</a>
-            <a href="https://github.com/willzcode/CyberNova" target="_blank">⚓code</a>
+            <a href="https://github.com/willzcode/CyberNova" target="_blank"
+              >⚓code</a
+            >
           </div>
           <div class="project-card">
             <div class="project-image">
@@ -130,8 +141,14 @@
               A Responsive landing page website for an NGO committed to
               providing education to girl child.
             </p>
-            <a href="https://girl-child-advocacy.vercel.app" target="_blank">🔗site</a>
-            <a href="https://github.com/willzcode/Girl-Child-Advocacy" target="_blank">⚓code</a>
+            <a href="https://girl-child-advocacy.vercel.app" target="_blank"
+              >🔗site</a
+            >
+            <a
+              href="https://github.com/willzcode/Girl-Child-Advocacy"
+              target="_blank"
+              >⚓code</a
+            >
           </div>
           <div class="project-card">
             <div class="project-image">
@@ -144,10 +161,15 @@
               footprint.
             </p>
             <a href="#">🔗site</a>
-            <a href="https://github.com/willzcode/willzcode-portfolio" target="_blank">⚓code</a>
+            <a
+              href="https://github.com/willzcode/willzcode-portfolio"
+              target="_blank"
+              >⚓code</a
+            >
           </div>
         </div>
       </section>
+      <!-- Contact section of the page -->
       <section class="contact">
         <h3>CONTACT</h3>
         <p>Do you have a project for me or a job?</p>
@@ -166,6 +188,7 @@
         </form>
       </section>
     </main>
+    <!-- footer of the page -->
     <footer><p>&copy;willzcode All Rights Reserved</p></footer>
   </body>
 </html>
