working on responsive navigation

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         <nav>
           <ul class="nav-links">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <main>
       <!-- About section of the page -->
-      <section class="about">
+      <section class="about" id="about">
         <div class="about-text-container">
           <h3>Hi there👋🏾</h3>
           <h1>I am <span>Williams.</span></h1>
@@ -71,7 +71,7 @@
         </div>
       </section>
       <!-- Skill section of the page -->
-      <section class="skills">
+      <section class="skills" id="skills">
         <h3>SKILLS &AMP; TOOLS</h3>
         <div class="skills-container">
           <div class="skill-card">
@@ -113,7 +113,7 @@
         </div>
       </section>
       <!-- Project section of the page -->
-      <section class="projects">
+      <section class="projects" id="projects">
         <h3>PROJECTS</h3>
         <div class="projects-container">
           <div class="project-card">
@@ -170,7 +170,7 @@
         </div>
       </section>
       <!-- Contact section of the page -->
-      <section class="contact">
+      <section class="contact" id="contact">
         <h3>CONTACT</h3>
         <p>Do you have a project for me or a job?</p>
         <p>feel free to contact me by sending a message below</p>
