working on navigation

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         </div>
         <!-- Navigation links -->
         <nav>
+          <div class="menu-bar" id="menu">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+          </div>
           <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
