--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
         <h3>CONTACT</h3>
         <p>Do you have a project for me or a job?</p>
         <p>feel free to contact me by sending a message below</p>
-        <form action="">
+        <form action="https://formsubmit.co/atabisawilliams@gmail.com" method="post">
           <input type="text" placeholder="What's your name?" required />
-          <input type="text" placeholder="what's your email?" required />
+          <input type="email" placeholder="what's your email?" required />
           <textarea
             name="message"
             id="message"
