update on forms

--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
         <p>Do you have a project for me or a job?</p>
         <p>feel free to contact me by sending a message below</p>
         <form action="https://formsubmit.co/atabisawilliams@gmail.com" method="post">
-          <input type="text" placeholder="What's your name?" required />
-          <input type="email" placeholder="what's your email?" required />
+          <input type="text" name="name" placeholder="What's your name?" required />
+          <input type="email" name="email" placeholder="what's your email?" required />
           <textarea
             name="message"
             id="message"
