--- a/index.html
+++ b/index.html
@@ -179,9 +179,22 @@
         <h3>CONTACT</h3>
         <p>Do you have a project for me or a job?</p>
         <p>feel free to contact me by sending a message below</p>
-        <form action="https://formsubmit.co/atabisawilliams@gmail.com" method="post">
-          <input type="text" name="name" placeholder="What's your name?" required />
-          <input type="email" name="email" placeholder="what's your email?" required />
+        <form
+          action="https://formsubmit.co/atabisawilliams@gmail.com"
+          method="post"
+        >
+          <input
+            type="text"
+            name="name"
+            placeholder="What's your name?"
+            required
+          />
+          <input
+            type="email"
+            name="email"
+            placeholder="what's your email?"
+            required
+          />
           <textarea
             name="message"
             id="message"
