implemented functionality fot toggle button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="A portfolio website to showcase me skills and projects"
     />
     <title>Atabisa Williams</title>
+    <link rel="icon" href="assets/profile picture.jpg" />
     <link rel="stylesheet" href="style.css" type="text/css" />
     <script src="script.js" defer></script>
   </head>
@@ -21,18 +22,20 @@
         </div>
         <!-- Navigation links -->
         <nav>
-          <div class="menu-bar" id="menu">
+          <div class="menu-bar">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
           </div>
-          <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
+          <div class="nav-links">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#skills">Skills</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
         </nav>
       </div>
     </header>
